tooling/nargo_cli/tests/snapshots/execution_success/databus_dead_param/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "tuple",
          "fields": [
            {
              "kind": "integer",
              "sign": "signed",
              "width": 8
            },
            {
              "kind": "integer",
              "sign": "unsigned",
              "width": 32
            },
            {
              "kind": "integer",
              "sign": "signed",
              "width": 8
            }
          ]
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "tuple",
            "fields": [
              {
                "kind": "integer",
                "sign": "signed",
                "width": 8
              },
              {
                "kind": "integer",
                "sign": "signed",
                "width": 8
              },
              {
                "kind": "boolean"
              },
              {
                "kind": "boolean"
              },
              {
                "kind": "string",
                "length": 0
              }
            ]
          }
        },
        "visibility": "databus"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 0,
        "type": {
          "kind": "tuple",
          "fields": [
            {
              "kind": "boolean"
            },
            {
              "kind": "string",
              "length": 3
            },
            {
              "kind": "string",
              "length": 0
            },
            {
              "kind": "integer",
              "sign": "unsigned",
              "width": 32
            }
          ]
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/4WPgQrAIAhEbbVWbh+x///KkpQkjjo4qkeeGmiIuz+9h+6op6gsTPwv7AL/ImAJsNvlGsuAPaC2AFZBLYMs0nfSGbLrUd3+NrfopSnbe5fBdFYDiWIJXIQBAAA=",
  "debug_symbols": "XY5BCsQwCEXv4rqLWfcqw1BsaosgJtikMITefWyYQOlK/3/6tcJCc9km1jXuML4rzMYivE0SA2aO6m49B+hyykbkFty4byU00gyjFpEBDpTShvaE2mpGc/oagHTx6oErC13d+XGBge158UBjnIX+ci0abjR/Uyf942Qx0FKMrqTGPPsH",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
