tooling/nargo_cli/tests/snapshots/execution_success/databus_dead_param/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "tuple",
          "fields": [
            {
              "kind": "integer",
              "sign": "signed",
              "width": 8
            },
            {
              "kind": "integer",
              "sign": "unsigned",
              "width": 32
            },
            {
              "kind": "integer",
              "sign": "signed",
              "width": 8
            }
          ]
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "tuple",
            "fields": [
              {
                "kind": "integer",
                "sign": "signed",
                "width": 8
              },
              {
                "kind": "integer",
                "sign": "signed",
                "width": 8
              },
              {
                "kind": "boolean"
              },
              {
                "kind": "boolean"
              },
              {
                "kind": "string",
                "length": 0
              }
            ]
          }
        },
        "visibility": "databus"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 0,
        "type": {
          "kind": "tuple",
          "fields": [
            {
              "kind": "boolean"
            },
            {
              "kind": "string",
              "length": 3
            },
            {
              "kind": "string",
              "length": 0
            },
            {
              "kind": "integer",
              "sign": "unsigned",
              "width": 32
            }
          ]
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _10",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:8 bits []",
    "BLACKBOX::RANGE [_1]:32 bits []",
    "BLACKBOX::RANGE [_2]:8 bits []",
    "BLACKBOX::RANGE [_3]:8 bits []",
    "BLACKBOX::RANGE [_4]:8 bits []",
    "BLACKBOX::RANGE [_5]:1 bits []",
    "BLACKBOX::RANGE [_6]:1 bits []",
    "BLACKBOX::RANGE [_7]:8 bits []",
    "BLACKBOX::RANGE [_8]:8 bits []",
    "BLACKBOX::RANGE [_9]:1 bits []",
    "BLACKBOX::RANGE [_10]:1 bits []",
    "INIT CALLDATA 0 (id: 1, len: 7, witnesses: [_3, _4, _5, _6, _7, _8, _9])"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
